<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_timetable"
            android:icon="?attr/actionModePasteDrawable"
            android:title="@string/my_lessons" />
        <item
            android:id="@+id/choose_department"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/choose_department" />
        <item
            android:id="@+id/admin"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/admin" />
        <item
            android:id="@+id/about"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="About" />
    </group>
</menu>